k8s/fixes/deployment-kgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "2"
    meta.helm.sh/release-name: kgateway
    meta.helm.sh/release-namespace: kgateway-system
  creationTimestamp: "2026-04-03T06:01:49Z"
  generation: 2
  labels:
    app.kubernetes.io/instance: kgateway
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kgateway
    app.kubernetes.io/version: v2.2.1
    helm.sh/chart: kgateway-v2.2.1
    kgateway: kgateway
  name: kgateway
  namespace: kgateway-system
  resourceVersion: "234459"
  uid: 16307527-c104-47d3-a632-31d0102eb224
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: kgateway
      app.kubernetes.io/name: kgateway
      kgateway: kgateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "9092"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: kgateway
        app.kubernetes.io/name: kgateway
        kgateway: kgateway
    spec:
      containers:
      - env:
        - name: GOMEMLIMIT
          valueFrom:
            resourceFieldRef:
              divisor: "1"
              resource: limits.memory
        - name: GOMAXPROCS
          valueFrom:
            resourceFieldRef:
              divisor: "1"
              resource: limits.cpu
        - name: KGW_LOG_LEVEL
          value: info
        - name: KGW_XDS_SERVICE_NAME
          value: kgateway
        - name: KGW_XDS_SERVICE_PORT
          value: "9977"
        - name: KGW_DEFAULT_IMAGE_REGISTRY
          value: cr.kgateway.dev/kgateway-dev
        - name: KGW_DEFAULT_IMAGE_TAG
          value: v2.2.1
        - name: KGW_DEFAULT_IMAGE_PULL_POLICY
          value: IfNotPresent
        - name: KGW_DISCOVERY_NAMESPACE_SELECTORS
          value: '[]'
        - name: KGW_POLICY_MERGE
          value: '{}'
        - name: KGW_VALIDATION_MODE
          value: standard
        - name: KGW_ENABLE_AGENTGATEWAY
          value: "false"
        - name: KGW_ENABLE_ENVOY
          value: "true"
        - name: KGW_GATEWAY_CLASS_PARAMETERS_REFS
          value: '{}'
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        image: cr.kgateway.dev/kgateway-dev/kgateway:v2.2.1
        imagePullPolicy: IfNotPresent
        name: controller
        ports:
        - containerPort: 9977
          name: grpc-xds
          protocol: TCP
        - containerPort: 9093
          name: health
          protocol: TCP
        - containerPort: 9092
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /readyz
            port: 9093
            scheme: HTTP
          initialDelaySeconds: 1
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 120
          httpGet:
            path: /readyz
            port: 9093
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: ip-172-31-64-95
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: kgateway
      serviceAccountName: kgateway
      terminationGracePeriodSeconds: 30
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-07T03:39:16Z"
    lastUpdateTime: "2026-04-07T03:39:16Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2026-04-03T06:01:49Z"
    lastUpdateTime: "2026-04-11T06:23:22Z"
    message: ReplicaSet "kgateway-59dd9984fc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 2
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
