k8s/fixes/deployment-medimesh-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: "2026-04-04T09:59:25Z"
  generation: 3
  labels:
    app.kubernetes.io/instance: medimesh-gateway
    app.kubernetes.io/managed-by: kgateway
    app.kubernetes.io/name: medimesh-gateway
    app.kubernetes.io/version: v2.2.1
    gateway.networking.k8s.io/gateway-class-name: kgateway
    gateway.networking.k8s.io/gateway-name: medimesh-gateway
    kgateway: kube-gateway
  name: medimesh-gateway
  namespace: medimesh-frontend
  ownerReferences:
  - apiVersion: gateway.networking.k8s.io/v1
    controller: true
    kind: Gateway
    name: medimesh-gateway
    uid: a4f408c6-80e8-4674-83a9-a6b736e88e7c
  resourceVersion: "236649"
  uid: b39391dc-01ae-4b41-bbb0-856cfccdb636
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: medimesh-gateway
      app.kubernetes.io/name: medimesh-gateway
      gateway.networking.k8s.io/gateway-name: medimesh-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-04-11T06:23:48Z"
        prometheus.io/path: /metrics
        prometheus.io/port: "9091"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: medimesh-gateway
        app.kubernetes.io/name: medimesh-gateway
        gateway.networking.k8s.io/gateway-class-name: kgateway
        gateway.networking.k8s.io/gateway-name: medimesh-gateway
        kgateway: kube-gateway
    spec:
      containers:
      - args:
        - --disable-hot-restart
        - --service-node
        - $(POD_NAME).$(POD_NAMESPACE)
        - --log-level
        - info
        env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
        - name: ENVOY_UID
          value: "0"
        image: cr.kgateway.dev/kgateway-dev/envoy-wrapper:v2.2.1
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - wget --post-data "" -O /dev/null 127.0.0.1:19000/healthcheck/fail;
                sleep 10
        name: kgateway-proxy
        ports:
        - containerPort: 80
          name: listener-80
          protocol: TCP
        - containerPort: 9091
          name: http-monitoring
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ready
            port: 8082
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10101
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /ready
            port: 8082
            scheme: HTTP
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 2
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/envoy
          name: envoy-config
        - mountPath: /var/run/secrets/tokens
          name: xds-token
          readOnly: true
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/hostname: ip-172-31-64-95
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      serviceAccount: medimesh-gateway
      serviceAccountName: medimesh-gateway
      terminationGracePeriodSeconds: 60
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/control-plane
        operator: Exists
      volumes:
      - name: xds-token
        projected:
          defaultMode: 420
          sources:
          - serviceAccountToken:
              audience: kgateway
              expirationSeconds: 43200
              path: xds-token
      - configMap:
          defaultMode: 420
          name: medimesh-gateway
        name: envoy-config
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2026-04-04T09:59:25Z"
    lastUpdateTime: "2026-04-11T06:24:24Z"
    message: ReplicaSet "medimesh-gateway-76c5db9944" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2026-04-11T06:36:53Z"
    lastUpdateTime: "2026-04-11T06:36:53Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 3
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
