k8s/fixes/netpol-gateway-to-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-gateway-to-backend-ingress","namespace":"medimesh-backend"},"spec":{"ingress":[{"from":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"medimesh-frontend"}},"podSelector":{"matchLabels":{"app.kubernetes.io/name":"medimesh-gateway"}}}]}],"podSelector":{},"policyTypes":["Ingress"]}}
  creationTimestamp: "2026-04-11T06:38:50Z"
  generation: 1
  name: allow-gateway-to-backend-ingress
  namespace: medimesh-backend
  resourceVersion: "236948"
  uid: 80806be1-fcf5-4705-9177-b223afb44445
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: medimesh-frontend
      podSelector:
        matchLabels:
          app.kubernetes.io/name: medimesh-gateway
  podSelector: {}
  policyTypes:
  - Ingress
