k8s/fixes/netpol-gateway-to-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-gateway-to-backend","namespace":"medimesh-frontend"},"spec":{"egress":[{"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"medimesh-backend"}}}]},{"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"medimesh-frontend"}}}]},{"ports":[{"port":9977,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kgatewa [...]
  creationTimestamp: "2026-04-11T06:38:50Z"
  generation: 1
  name: allow-gateway-to-backend
  namespace: medimesh-frontend
  resourceVersion: "236947"
  uid: 633b0215-7ece-4589-add2-f00e80b18c83
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: medimesh-backend
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: medimesh-frontend
  - ports:
    - port: 9977
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kgateway-system
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: medimesh-gateway
  policyTypes:
  - Egress
