k8s/fixes/netpol-gateway-to-kgateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.k8s.io/v1","kind":"NetworkPolicy","metadata":{"annotations":{},"name":"allow-gateway-to-kgateway","namespace":"medimesh-frontend"},"spec":{"egress":[{"ports":[{"port":9977,"protocol":"TCP"}],"to":[{"namespaceSelector":{"matchLabels":{"kubernetes.io/metadata.name":"kgateway-system"}}}]},{"ports":[{"port":53,"protocol":"UDP"},{"port":53,"protocol":"TCP"}],"to":[{"namespaceSelector":{}}]}],"podSelector":{"matchLabels":{"app.kubernetes.io/name":"medimesh-gateway"}},"p [...]
  creationTimestamp: "2026-04-11T06:36:41Z"
  generation: 1
  name: allow-gateway-to-kgateway
  namespace: medimesh-frontend
  resourceVersion: "236589"
  uid: 61cf2e61-aa16-481f-9dc6-3a18ab506c44
spec:
  egress:
  - ports:
    - port: 9977
      protocol: TCP
    to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kgateway-system
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
    to:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: medimesh-gateway
  policyTypes:
  - Egress
